[package]
name = "tuie-todo"
version = "0.1.0"
description = "An todo app using TUIE"
authors = ["trapalleiro"]
license = "MIT"
edition = "2024"

[dependencies]
tuie = { version = "0.2.1", features = ["harmonious"] }
axis2d = "0.1.0"
chord_macro = "0.1.0"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
